tests/baselines/reference/selfReferencingFile3.errors.txt
selfReferencingFile3.ts(1,21): error TS1006: A file cannot have a reference to itself.


==== selfReferencingFile3.ts (1 errors) ====
    ///<reference path='./selfReferencingFile3.ts'/>
                        ~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS1006: A file cannot have a reference to itself.
    
    class selfReferencingFile3 {
    
    }